--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,5 +1,7 @@
+project_id: 724667
+preserve_hierarchy: true
 files:
-- source: /i18n/locale/en/code.json
-  translation: /i18n/locale/%locale%/code.json
-- source: /i18n/locale/en/template.json
-  translation: /i18n/locale/%locale%/template.json
+- source: i18n/locale/en/code.json
+  translation: i18n/locale/%locale%/%original_file_name%
+- source: i18n/locale/en/template.json
+  translation: i18n/locale/%locale%/%original_file_name%
