--- a/crowdin.yml
+++ b/crowdin.yml
@@ -2,6 +2,8 @@ project_id: 724667
 preserve_hierarchy: true
 files:
 - source: i18n/locale/en/code.json
+  dest: code.json
   translation: i18n/locale/%locale%/%original_file_name%
 - source: i18n/locale/en/template.json
+  dest: template.json
   translation: i18n/locale/%locale%/%original_file_name%
