--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,8 @@ PIXIVFE_HOST='127.0.0.1'
 ### Development options
 # PIXIVFE_DEV=
 # PIXIVFE_RESPONSE_SAVE_LOCATION
+
+### Logging options
+# PIXIVFE_LOG_LEVEL=
+# PIXIVFE_LOG_OUTPUTS=
+# PIXIVFE_LOG_FORMAT=
